<resources>
    <string name="app_name">File Vault</string>
    <string name="welcome_title">Welcome to File Vault!</string>
    <string name="welcome_description">File Vault allows you to encrypt your photos, videos, and personal files on your device</string>
    <string name="welcome_start">Let\'s get started!</string>
    <string name="new_user">New User</string>
    <string name="set_password_title">Set your password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered? Click here to login</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="no_account">No account? Click here to register</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_no_match">Passwords do not match</string>
    <string name="set_key_title">Set your encryption key</string>
    <string name="key">Key</string>
    <string name="confirm_key">Confirm key</string>
    <string name="key_no_match">Keys do not match</string>
    <string name="set_key">Set encryption key</string>
    <string name="enter_key">Enter your encryption key</string>
    <string name="incorrect_key">Incorrect encryption key</string>
    <string name="unlock">Unlock</string>
    <string name="decrypting">Decrypting Files…</string>
    <string name="permissions_title">File Vault needs access to your file storage</string>
    <string name="permissions_description">This allows File Vault to access and encrypt your photos, videos, and personal files</string>
    <string name="grant_access">Grant Access</string>
    <string name="finished_title">Setup complete!</string>
    <string name="finished_description">File Vault is now configured and ready for use. You may now encrypt your files :)</string>
    <string name="finished_continue">Continue</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="file_name">File Name</string>
    <string name="file_date">Date Modified</string>
    <string name="file_size">File Size</string>
    <string name="encrypt">Encrypt</string>
    <string name="open">Open</string>
    <string name="rename">Rename</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="vault">Vault</string>
    <string name="file_explorer">File Explorer</string>
    <string name="backup">Backup</string>
    <string name="backup_dialog_title">Backup Files</string>
    <string name="backup_dialog_message">Are you sure you want to backup all files?</string>
    <string name="backup_no_files">No files to backup</string>
    <string name="restore">Restore</string>
    <string name="restore_dialog_title">Restore Files</string>
    <string name="restore_dialog_message">Are you sure you want to restore all files?</string>
    <string name="restore_no_files">No files to restore</string>
    <string name="settings">Settings</string>
    <string name="settings_external_intents">Use External Intents</string>
    <string name="cloud">Cloud</string>
    <string name="other">Other</string>
    <string name="sort">Sort</string>
    <string name="by_name">By Name</string>
    <string name="by_date">By Date</string>
    <string name="refresh">Refresh</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="preference_key">FV-Key</string>
    <string name="preference_iv">FV-IV</string>
    <string name="preference_salt">FV-Salt</string>
    <string name="preference_external_intents">FV-Intents</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
</resources>
