<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account_24dp"
        android:orderInCategory="1"
        android:title="@string/backup"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_backup"
        android:icon="@drawable/ic_cloud_upload_24dp"
        android:orderInCategory="2"
        android:title="@string/backup"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="3"
        android:icon="@drawable/ic_sort_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_by_name"
                android:title="@string/by_name" />

            <item
                android:id="@+id/action_by_date"
                android:title="@string/by_date" />

        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>