<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:id="@+id/layout_screen"
        style="@style/LayoutScreen">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />

        <LinearLayout
            android:id="@+id/layout_permissions"
            style="@style/LayoutScreenColorTop">

            <ImageView
                android:id="@+id/image_lock"
                style="@style/ImageLock"
                app:srcCompat="@drawable/ic_lock_256dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/text_welcome_title"
                style="@style/TextLargeWhite"
                android:text="@string/welcome_title" />

            <TextView
                android:id="@+id/text_welcome_description"
                style="@style/TextSmallLight"
                android:text="@string/welcome_description" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <Button
                android:id="@+id/button_new_user"
                style="@style/ButtonWhite"
                android:onClick="buttonNewUser"
                android:text="@string/new_user" />

            <Button
                android:id="@+id/button_login"
                style="@style/ButtonWhite"
                android:onClick="buttonLogin"
                android:text="@string/login" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>