<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetKeyActivity">

    <LinearLayout
        android:id="@+id/layout_screen"
        style="@style/LayoutScreen">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />

        <LinearLayout
            android:id="@+id/layout_permissions"
            style="@style/LayoutScreenColorTop">

            <ImageView
                android:id="@+id/image_lock"
                style="@style/ImageLock"
                app:srcCompat="@drawable/ic_lock_256dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/text_set_password_title"
                style="@style/TextLargeWhite"
                android:text="@string/set_key_title" />

            <TextView
                android:id="@+id/text_password"
                style="@style/TextSmallAccent"
                android:text="@string/key" />

            <EditText
                android:id="@+id/edittext_password"
                style="@style/EditTextLoginPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/text_confirm_password"
                style="@style/TextSmallAccent"
                android:text="@string/confirm_key" />

            <EditText
                android:id="@+id/edittext_confirm_password"
                style="@style/EditTextLoginPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <Button
                android:id="@+id/button_set_password"
                style="@style/ButtonWhite"
                android:onClick="buttonSetPassword"
                android:text="@string/set_key" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>