<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupCompleteActivity">

    <LinearLayout
        android:id="@+id/layout_permissions"
        style="@style/LayoutFullColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <ImageView
                android:id="@+id/image_lock"
                style="@style/ImageLock"
                app:srcCompat="@drawable/ic_lock_256dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:id="@+id/text_welcome_title"
                style="@style/TextLargeWhite"
                android:text="@string/finished_title" />

            <TextView
                android:id="@+id/text_welcome_description"
                style="@style/TextSmallLight"
                android:text="@string/finished_description" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <Button
                android:id="@+id/button_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonContinue"
                android:text="@string/finished_continue" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>