<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetPasswordActivity">

    <LinearLayout
        android:id="@+id/layout_permissions"
        style="@style/LayoutFullColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <ImageView
                android:id="@+id/image_lock"
                style="@style/ImageLock"
                app:srcCompat="@drawable/ic_lock_256dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:id="@+id/text_set_password_title"
                style="@style/TextLargeWhite"
                android:text="@string/set_password_title" />

            <TextView
                android:id="@+id/text_password"
                style="@style/TextSmallAccent"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edittext_password"
                style="@style/TextPinInput" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/text_confirm_password"
                style="@style/TextSmallAccent"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/edittext_confirm_password"
                style="@style/TextPinInput" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <Button
                android:id="@+id/button_set_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonSetPassword"
                android:text="@string/set_password" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>