<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LockScreenActivity">

    <LinearLayout
        android:id="@+id/layout_screen"
        style="@style/LayoutScreen">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />

        <LinearLayout
            android:id="@+id/layout_lockscreen"
            style="@style/LayoutScreenColorTop">

            <ImageView
                android:id="@+id/image_lock"
                style="@style/ImageLock"
                app:srcCompat="@drawable/ic_lock_256dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/text_enter_password"
                style="@style/TextLargeWhite"
                android:text="@string/enter_password" />

            <TextView
                android:id="@+id/text_password"
                style="@style/TextSmallAccent"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edittext_password"
                style="@style/EditTextPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <Button
                android:id="@+id/button"
                style="@style/ButtonWhite"
                android:onClick="buttonUnlock"
                android:text="@string/unlock" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_decrypting"
        style="@style/LayoutDecrypting"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_decrypting"
            style="@style/ImageLock"
            app:srcCompat="@drawable/ic_loading_256dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/text_decrypting"
            style="@style/TextLargeWhite"
            android:text="@string/decrypting" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>